sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value getMondeLongueur
for (i <- 0 to getMondeLongueur-2) {
               ^