sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
for (i <- 0 to getMondeLongueur-2) {
	if (getValeur(i) > getValeur(i+1)) {
		echange(i,i+1)
	}
}
}
